Removed logo and fixed more spacing

--- a/Mom/MainStyle.css
+++ b/Mom/MainStyle.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     flex-direction: row;
     
     width: 50%;
